[package]
name = "telebin"
version = "0.1.0"
authors = ["Yongsheng Xu <chuxdesign@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git", branch = "master" }
futures = "0.3"
tokio = { version = "1.2", features = ["macros", "time", "fs", "rt-multi-thread"]}
sqlx = { version = "0.5", features = [ "sqlite", "runtime-tokio-rustls", "chrono" ] }
anyhow = "1.0"
